<resources>
    <string name="app_name">About Me</string>
    <string name="name">Junaid Rehman</string>
    <string name="yellow_star_button">Yellow Star Button</string>
    <string name="bio">Junaid Rehman Rehman is a 23-year-old town counsellor with an unfortunate habit of bumping off the people around him.
        He is curious and daring, but can also be very short-tempered and a bit ugly.Junaid Rehman Rehman is a 23-year-old town counsellor
        with an unfortunate habit of bumping off the people around him. He is curious and daring, but can also be very short-tempered and a
        bit ugly.Junaid Rehman Rehman is a 23-year-old town counsellor with an unfortunate habit of bumping off the people around him.
        He is curious and daring, but can also be very short-tempered and a bit ugly.Junaid Rehman Rehman is a 23-year-old town counsellor
        with an unfortunate habit of bumping off the people around him. He is curious and daring, but can also be very short-tempered anda
        bit ugly.Junaid Rehman Rehman is a 23-year-old town counsellor with an unfortunate habit of bumping off the people around him. He is
        curious and daring, but can also be very short-tempered and a bit ugly.Junaid Rehman Rehman is a 23-year-old town counsellor with
        an unfortunate habit of bumping off the people around him. He is curious and daring, but can also be very short-tempered and a bit ugly.Junaid Rehman Rehman is a 23-year-old town counsellor with an unfortunate habit of bumping off the people around him. He is curious and daring, but can also be very short-tempered and a bit ugly.Junaid Rehman Rehman is a 23-year-old town counsellor with an unfortunate habit of bumping off the people around him. He is curious and daring, but can also be very short-tempered and a bit ugly.Junaid Rehman Rehman is a 23-year-old town counsellor with an unfortunate habit of bumping off the people around him. He is curious and daring, but can also be very short-tempered and a bit ugly.Junaid Rehman Rehman is a 23-year-old town counsellor with an unfortunate habit of bumping off the people around him.
        He is curious and daring, but can also be very short-tempered and a bit ugly..</string>
    <string name="radio_button">Radio Button</string>
    <string name="name_hint">Enter your name here....</string>
    <string name="done">Done</string>
</resources>